--- a/Whitelagoon.Web/appsettings.json
+++ b/Whitelagoon.Web/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-    "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=MMINFRA,1983;Database=WhiteLagoon;User ID=devteam;Password=devteam;Connect Timeout=30;MultipleActiveResultSets=true;TrustServerCertificate=true;"
-    }
+        "DefaultConnection": "Server=MMINFRA,1983;Database=WhiteLagoon;User ID=devteam;Password=devteam;Connect Timeout=30;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
+
 }
